Basic Controller Testing and Controller Fixes